--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #ae8556;
-$secondary : #26A69A;
+$secondary : #26A69b;
 $accent    : #9C27B0;
 
 $dark      : #1D1D1D;
